# susos

./: .gitignore  Cargo.toml  build.sh
.cargo/: config.toml  linker-amd64.ld  linker-mbr-i386.ld  linker-os-amd64.ld  target-amd64.json  target-i386.json
microloader/: Cargo.toml  README.md  build.rs
microloader/src/: bios.rs  main.rs
susos/: Cargo.toml  build.rs  rust-toolchain.toml
susos/src/: main.rs
